Punto 7 casi finalizado